--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "font-awesome-loader",
-  "version": "0.0.1-beta.1",
+  "version": "1.0.0",
   "description": "font-awesome package for webpack using sass",
   "main": "index.js",
   "loader": "index.loader.js",
